Interceptor improvements
* Add OnionBlob and OutgoingAmount parameters
* Add OutgoingRequestedChanId when resuming a forward htlc
* Add a failure code
