# lnrpc/routerrpc/router.swagger.json
@@ -508,41 +508,6 @@
     }
   },
   "definitions": {
-    "FailureFailureCode": {
-      "type": "string",
-      "enum": [
-        "RESERVED",
-        "INCORRECT_OR_UNKNOWN_PAYMENT_DETAILS",
-        "INCORRECT_PAYMENT_AMOUNT",
-        "FINAL_INCORRECT_CLTV_EXPIRY",
-        "FINAL_INCORRECT_HTLC_AMOUNT",
-        "FINAL_EXPIRY_TOO_SOON",
-        "INVALID_REALM",
-        "EXPIRY_TOO_SOON",
-        "INVALID_ONION_VERSION",
-        "INVALID_ONION_HMAC",
-        "INVALID_ONION_KEY",
-        "AMOUNT_BELOW_MINIMUM",
-        "FEE_INSUFFICIENT",
-        "INCORRECT_CLTV_EXPIRY",
-        "CHANNEL_DISABLED",
-        "TEMPORARY_CHANNEL_FAILURE",
-        "REQUIRED_NODE_FEATURE_MISSING",
-        "REQUIRED_CHANNEL_FEATURE_MISSING",
-        "UNKNOWN_NEXT_PEER",
-        "TEMPORARY_NODE_FAILURE",
-        "PERMANENT_NODE_FAILURE",
-        "PERMANENT_CHANNEL_FAILURE",
-        "EXPIRY_TOO_FAR",
-        "MPP_TIMEOUT",
-        "INVALID_ONION_PAYLOAD",
-        "INTERNAL_FAILURE",
-        "UNKNOWN_FAILURE",
-        "UNREADABLE_FAILURE"
-      ],
-      "default": "RESERVED",
-      "description": " - RESERVED: The numbers assigned in this enumeration match the failure codes as\ndefined in BOLT #4. Because protobuf 3 requires enums to start with 0,\na RESERVED value is added.\n - INTERNAL_FAILURE: An internal error occurred.\n - UNKNOWN_FAILURE: The error source is known, but the failure itself couldn't be decoded.\n - UNREADABLE_FAILURE: An unreadable failure result is returned if the received failure message\ncannot be decrypted. In that case the error source is unknown."
-    },
     "HTLCAttemptHTLCStatus": {
       "type": "string",
       "enum": [
@@ -657,7 +622,7 @@
       "type": "object",
       "properties": {
         "code": {
-          "$ref": "#/definitions/FailureFailureCode",
+          "$ref": "#/definitions/lnrpcFailureFailureCode",
           "title": "Failure code as defined in the Lightning spec"
         },
         "channel_update": {
@@ -695,6 +660,41 @@
           "description": "A failure type-dependent block height."
         }
       }
+    },
+    "lnrpcFailureFailureCode": {
+      "type": "string",
+      "enum": [
+        "RESERVED",
+        "INCORRECT_OR_UNKNOWN_PAYMENT_DETAILS",
+        "INCORRECT_PAYMENT_AMOUNT",
+        "FINAL_INCORRECT_CLTV_EXPIRY",
+        "FINAL_INCORRECT_HTLC_AMOUNT",
+        "FINAL_EXPIRY_TOO_SOON",
+        "INVALID_REALM",
+        "EXPIRY_TOO_SOON",
+        "INVALID_ONION_VERSION",
+        "INVALID_ONION_HMAC",
+        "INVALID_ONION_KEY",
+        "AMOUNT_BELOW_MINIMUM",
+        "FEE_INSUFFICIENT",
+        "INCORRECT_CLTV_EXPIRY",
+        "CHANNEL_DISABLED",
+        "TEMPORARY_CHANNEL_FAILURE",
+        "REQUIRED_NODE_FEATURE_MISSING",
+        "REQUIRED_CHANNEL_FEATURE_MISSING",
+        "UNKNOWN_NEXT_PEER",
+        "TEMPORARY_NODE_FAILURE",
+        "PERMANENT_NODE_FAILURE",
+        "PERMANENT_CHANNEL_FAILURE",
+        "EXPIRY_TOO_FAR",
+        "MPP_TIMEOUT",
+        "INVALID_ONION_PAYLOAD",
+        "INTERNAL_FAILURE",
+        "UNKNOWN_FAILURE",
+        "UNREADABLE_FAILURE"
+      ],
+      "default": "RESERVED",
+      "description": " - RESERVED: The numbers assigned in this enumeration match the failure codes as\ndefined in BOLT #4. Because protobuf 3 requires enums to start with 0,\na RESERVED value is added.\n - INTERNAL_FAILURE: An internal error occurred.\n - UNKNOWN_FAILURE: The error source is known, but the failure itself couldn't be decoded.\n - UNREADABLE_FAILURE: An unreadable failure result is returned if the received failure message\ncannot be decrypted. In that case the error source is unknown."
     },
     "lnrpcFeatureBit": {
       "type": "string",
@@ -1018,14 +1018,11 @@
     "protobufAny": {
       "type": "object",
       "properties": {
-        "type_url": {
+        "@type": {
           "type": "string"
-        },
-        "value": {
-          "type": "string",
-          "format": "byte"
         }
-      }
+      },
+      "additionalProperties": {}
     },
     "routerrpcBuildRouteRequest": {
       "type": "object",
@@ -1201,9 +1198,34 @@
           "type": "string",
           "format": "byte",
           "description": "The preimage in case the resolve action is Settle."
+        },
+        "outgoing_amount_msat": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "outgoing_requested_chan_id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The requested outgoing channel id for this forwarded htlc. Because of\nnon-strict forwarding, this isn't necessarily the channel over which the\npacket will be forwarded eventually. A different channel to the same peer\nmay be selected as well."
+        },
+        "onion_blob": {
+          "type": "string",
+          "format": "byte"
+        },
+        "failure_code": {
+          "$ref": "#/definitions/routerrpcForwardHtlcInterceptResponseFailureCode"
         }
       },
       "description": "*\nForwardHtlcInterceptResponse enables the caller to resolve a previously hold\nforward. The caller can choose either to:\n- `Resume`: Execute the default behavior (usually forward).\n- `Reject`: Fail the htlc backwards.\n- `Settle`: Settle this htlc with a given preimage."
+    },
+    "routerrpcForwardHtlcInterceptResponseFailureCode": {
+      "type": "string",
+      "enum": [
+        "RESERVED",
+        "INCORRECT_OR_UNKNOWN_PAYMENT_DETAILS",
+        "TEMPORARY_CHANNEL_FAILURE"
+      ],
+      "default": "RESERVED"
     },
     "routerrpcGetMissionControlConfigResponse": {
       "type": "object",
@@ -1304,7 +1326,7 @@
           "description": "Info contains details about the htlc that we failed."
         },
         "wire_failure": {
-          "$ref": "#/definitions/FailureFailureCode",
+          "$ref": "#/definitions/lnrpcFailureFailureCode",
           "description": "FailureCode is the BOLT error code for the failure."
         },
         "failure_detail": {
